# heptapus-certs

./: .gitignore  CLAUDE.md  IMPLEMENTATION_COMPLETED.md  LICENSE  QUICK_START.md  README.md  SYSTEM_TEST_COMPLETE.md  TECHNICAL_ARCHITECTURE.md  TEST_RESULTS.md  mail.html  test_all_endpoints.ps1  test_all_endpoints.py
.claude/: settings.json
.codesight/: CODESIGHT.md  components.md  config.md  coverage.md  events.md  graph.md  libs.md  middleware.md  report.html  routes.md  schema.md
agent-records/: presentation-system.md
docs/: ACCESSIBILITY_IMPROVEMENTS.md  ARCHITECTURE_SEPARATION.md  DEPLOYMENT_CHECKLIST_COMPREHENSIVE.md  DEPLOYMENT_SUMMARY.md  DOCUMENTATION_INDEX.md  EMAIL_SYSTEM_TESTING.md  FINAL_STATUS_REPORT.md  HEPTACERT_PITCH_DECK_EN.md  HeptaCert-Egitim-Serisi.md  IMPLEMENTATION_COMPLETE_SUMMARY.md  IMPLEMENTATION_STATUS.md  LMS_EXPANSION_PLAN.md  PRODUCT_ROADMAP_HEPTACERT.md  README.md  README_EMAIL_SYSTEM.md  SESSION_SUMMARY.md  SOSYAL_MEDYA_ICERIK.md  SUBSCRIPTION_AND_TEST_GAPS.md  TEKNIK_DOKUMAN.md  TEMIZLIK_OTURUM_DURUMU.md  TESTING_CHECKLIST.md  TEST_REHBERI.md  floating-popping-scroll.md  hata.md  main_py_refactor_plan.md
heptacert/: .env  .env.example  .gitignore  Caddyfile.whitelabel.example  LOCAL_DOCKER.md  build_output.txt  docker-compose.local.yml  loadtest.py  (+3 more)
heptacert/cli/: pyproject.toml
heptacert/cli/heptacert_cli/: __init__.py  client.py  config.py  main.py  output.py
heptacert/cli/heptacert_cli/commands/: attendees.py  auth.py  automations.py  certs.py  checkin.py  config.py  events.py  lms.py  logs.py  sessions.py  webhooks.py
(+812 files in other folders)
