[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "heptacert-cli"
version = "1.0.0"
description = "HeptaCert CLI — manage events, attendees, certificates and more from your terminal"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12",
    "httpx>=0.27",
    "rich>=13",
    "pydantic>=2",
]

[project.scripts]
hc = "heptacert_cli.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["heptacert_cli*"]
